@@ -11,7 +11,7 @@ from .actions import RVFlags, TrainFlags, CargoClass, train_hpi, train_ton, \
     nml_te, nml_drag, py_property, SpriteRef, SpriteLayout, SpriteLayoutList, \
     GroundSprite, ParentSprite, ChildSprite, TrainFlags, ShipFlags, AIFlags, \
     TrainRunningCost, TrainVisualEffect, IndustryLayout, IndustryTileRef, \
-    OldIndustryTileRef, TownGrowthEffect
+    OldIndustryTileRef, TownGrowthEffect, Eval
 from .strings import StringRef, TTDString
 from .lib import *
 from . import decompile
