@@ -28,6 +28,7 @@
 - Add some VarAction2 variables for houses.
 - Add `TTDString` and `TTDIndustry` constants.
 - Add `TownGrowthEffect` constants.
+- Add `Eval` as a version of `Switch` without ranges.
 - Support using StringRef in Action 0x14 (`SetProperties`).
 - Support using StringRef as `NewGRF` `name` and `description`.
 - Support encoding of industry layouts.
@@ -42,6 +43,7 @@
 - Rename `AlternativeSprites.get_zoom` to `get_sprite` and add bpp argument.
 - Rename some of the Action0 properties for `CARGO` to match nml.
 - Don't write redundant actions for railtypes without fallbacks in railtype table.
+- Return cargo type ids in `NewGRF.set_cargo_table`.
 
 - lib: Fix `CallbackManager.make_switches` for non-vehicle features.
 - lib: Fix incorrect 2cc colors for auto-articulated parts.
